crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_8.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NOF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00158960_10300\u0015"
      start_time: "8960"
      end_time: "10300"
