crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_0.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: MOT
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: 然后
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 然后
    - Word:
        category: ~
        body:
          - Text: 呢
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 呢
    - Separator:
        Comma: ","
    - Word:
        category: ~
        body:
          - Text: 我
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 我
    - Word:
        category: ~
        body:
          - Text: 们
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 们
  terminator:
    TrailingOff: +...
  postcodes: []
  media_bullet: ~
