crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_10.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: GRA
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Retrace:
        content:
          - Word:
              category: ~
              body:
                - Text: 诶
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: 诶
          - Word:
              category: ~
              body:
                - Text: 诶
              form_marker: ~
              lang: ~
              pos_tag: ~
              annotations: []
              raw_text: 诶
        kind: Partial
        is_group: true
        annotations: []
    - Word:
        category: ~
        body:
          - Text: 诶
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: 诶
  terminator:
    Period: "."
  postcodes: []
  media_bullet: ~
