crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_12.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: PAR
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: and
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: and
    - Word:
        category: Filler
        body:
          - Text: um
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "&-um"
    - Word:
        category: ~
        body:
          - Text: so
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: so
    - Word:
        category: ~
        body:
          - Text: she
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: she
    - Word:
        category: ~
        body:
          - Text: ran
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: ran
    - Word:
        category: ~
        body:
          - Text: outside
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: outside
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u0015542638_545282\u0015"
      start_time: "542638"
      end_time: "545282"
