crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_13.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: i
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: i
    - Word:
        category: ~
        body:
          - Text: piro
          - SyllablePause
          - Text: ctano
        form_marker: c
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: piro^ctano@c
  terminator:
    Period: "."
  postcodes: []
  media_bullet: ~
